# vibe-coding-speech-to-text

./: .gitignore  README.md  mcp_speech_to_text_server.spec  mic_test.py  pyproject.toml
.cursor/rules/: voice_control_rules.mdc
mcp_speech_to_text_server/: main.py
